# heuristic_book_rust

./: Cargo.toml  README.md
OnePlayerGame/: 00_mazeState.rs  01_greedy.rs
