[package]
name = "heuristic_book_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

[[bin]]
name = "maze_state00"
path = "OnePlayerGame/00_mazeState.rs"

[[bin]]
name = "greedy01"
path = "OnePlayerGame/01_greedy.rs"
